--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -106,7 +106,7 @@
                     <li>
                         <a _href="{:url('index/ProcessType/index')}">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>工序类型</cite>
+                            <cite>工艺类型</cite>
                         </a>
                     </li >
                     <li>
