--- a/application/index/view/equipment/equipmentInfo.html
+++ b/application/index/view/equipment/equipmentInfo.html
@@ -51,7 +51,7 @@
                     <th>购买日期</th>
                     <th>购买价格</th>
                     <th>当前价值</th>
-                    <!--<th>正在运行</th>-->
+                    <th>正在运行</th>
                     <th>卖出日期</th>
                     <th>使用者</th>
                 </tr>
@@ -83,7 +83,7 @@
                     <td>{$equipmentInfoList.purchasing_date}</td>
                     <td>{$equipmentInfoList.price}</td>
                     <td>{$equipmentInfoList.current_price}</td>
-                    <!--<td> {$equipmentInfoList.is_working?'<span class="layui-badge layui-bg-green">是</span>':'<span class="layui-badge">否</span>'}  </td>-->
+                    <td> {$equipmentInfoList.is_working?'<span class="layui-badge layui-bg-green">是</span>':'<span class="layui-badge">否</span>'}  </td>
                     <td>{$equipmentInfoList.sell_date}</td>
                     <td>{$equipmentInfoList.user}</td>
                 </tr>
