--- a/application/index/view/production_records/add_log.html
+++ b/application/index/view/production_records/add_log.html
@@ -69,7 +69,7 @@
                 <input type="number" class="layui-input" name="product_qty" id="product_qty" value="" lay-verify="required" placeholder="禁止修改:请填写完成数量参数" disabled>
             </div>
         </div>
-        <div class="layui-form-item">
+        <div class="layui-form-item" hidden>
             <label class="layui-form-label">质量等级</label>
             <div class="layui-input-block" >
                 <input type="text" class="layui-input" name="quality_grade" value="1" id="quality_grade" lay-verify="required">
