--- a/application/index/view/production_records/edit_view.html
+++ b/application/index/view/production_records/edit_view.html
@@ -68,7 +68,7 @@
                 </select>
             </div>
         </div>
-        <input type="hidden" name="create_name" value="{$Think.session.user.user_name}">
+        <input type="hidden" name="update_name" value="{$Think.session.user.user_name}">
         <div class="layui-form-item">
             <label class="layui-form-label">合格品数量</label>
             <div class="layui-input-block" >
