--- a/application/index/view/production_records/edit_view.html
+++ b/application/index/view/production_records/edit_view.html
@@ -162,7 +162,7 @@
             if(!$('#complete').attr("disabled")){
                 var lastCount = $("#lastCount").text();
                 lastCount = parseFloat(lastCount);
-                data.field['complere_qty'] = lastCount;
+                //data.field['complere_qty'] = lastCount;
                 if(data.field['complete_qty']>lastCount || data.field['complete_qty']<0){
                     layer.alert("完成数量不得超过剩余数量: "+lastCount, {icon: 5});
                     return false;
@@ -173,7 +173,7 @@
             }else{
                 data.field['if_audit']="未审"
             }
-            //console.log(data.field);
+            console.log(data.field);
             $.post("{:url('index/ProductionRecords/saveEdit')}",data.field,function(info){
                 if (info) {
                     layer.msg("修改成功", {time:1000,icon: 6},function () {
