--- a/application/index/view/current_task/in-task.html
+++ b/application/index/view/current_task/in-task.html
@@ -31,6 +31,7 @@
           <thead>
           <tr>
             <th>操作</th>
+            <th>进度</th>
             <th>任务编号</th>
             <th>产品图号</th>
             <th>产品名称</th>
@@ -48,7 +49,6 @@
           <tbody>
           {volist name="productTaskInfo" id="info"}
           <?php $blueprintInfoList = getblueprintInfo($info['order_detial_id']);?>
-
           <tr>
             <td class="td-manage">
               <button class="layui-btn layui-btn layui-btn-xs"  onclick="x_admin_show('编辑','{:url(\'index/Task/editTask\',[\'id\'=>$info.id])}',600,500)" >编辑</button>
@@ -56,6 +56,8 @@
               <button class="layui-btn layui-btn layui-btn-xs"  onclick="x_admin_show('生产记录','{:url(\'index/ProductionRecords/index\',[\'task_id\'=>$info.task_id,\'drawing\'=>$blueprintInfoList.drawing_detail_id])}')" >填</button>
               {/if}
             </td>
+            <?php $data =  getOrderStaus($blueprintInfoList['drawing_detail_id'],$info['task_id']) ;?>
+            <td>{$data}</td>
             <td>{$info.task_id}</td>
             <td>{$blueprintInfoList.drawing_detail_id}</td>
             <td>{$info.order_detial_id|getOrderDrawingName}</td>
