完成进度颜色

--- a/application/index/view/product_task/product.html
+++ b/application/index/view/product_task/product.html
@@ -45,7 +45,7 @@
 
               <tr>
                 <td>
-                  <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
+                  <div style="color: " class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
                 </td>
                 <td>{$info.task_id}</td>
                 <td>{$blueprintInfoList.drawing_detail_id}</td>
