--- a/application/index/view/current_task/in-task.html
+++ b/application/index/view/current_task/in-task.html
@@ -31,7 +31,6 @@
           <thead>
           <tr>
             <th>操作</th>
-            <th>进度</th>
             <th>任务编号</th>
             <th>产品图号</th>
             <th>产品名称</th>
@@ -39,6 +38,7 @@
             <th>材料</th>
             <th>数量</th>
             <th>图纸工艺</th>
+            <th>进度</th>
             <th>下达日期</th>
             <th>要求日期</th>
             <th>设备名称</th>
@@ -56,8 +56,6 @@
               <button class="layui-btn layui-btn layui-btn-xs"  onclick="x_admin_show('生产记录','{:url(\'index/ProductionRecords/index\',[\'task_id\'=>$info.task_id,\'drawing\'=>$blueprintInfoList.drawing_detail_id])}')" >填</button>
               {/if}
             </td>
-            <?php $data =  getOrderStaus($blueprintInfoList['drawing_detail_id'],$info['task_id']) ;?>
-            <td>{$data}</td>
             <td>{$info.task_id}</td>
             <td>{$blueprintInfoList.drawing_detail_id}</td>
             <td>{$info.order_detial_id|getOrderDrawingName}</td>
@@ -82,6 +80,11 @@
               {else}
               <a title="工"  href="javascript:;" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的工艺信息','{:url(\'index/blueprint/process\',[\'drawing_detail_id\'=>$blueprintInfoList.drawing_detail_id])}')" ><span  class="layui-badge layui-bg-blue">工</span></a>
               {/if}
+            </td>
+            <?php $data =  getOrderStaus($blueprintInfoList['drawing_detail_id'],$info['task_id'],$info['id']) ;?>
+            <?php $yans =  yanz($blueprintInfoList['drawing_detail_id'],$info['task_id'],$info['id']) ;?>
+            <td>
+              <?php echo $data;?>
             </td>
             <td>{$info.create_time}</td>
             <td></td>
